--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    
-    <link rel="stylesheet" href="" />
+    <title>Computer Health Issues</title>
+    <link rel="icon" type="image/x-icon" href="images/Untitled.ico">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h4>Chrome Dino</h4>
@@ -20,7 +21,7 @@
           <li><a href="https://www.linkedin.com/in/oskar-kalbarczyk-8665ba123/" target="_blank">LinkedIn</a></li>
         </ul>
       </footer>
-    <script src=""></script>
+    <script src="script.js"></script>
 
     <div></div>
          <table style="margin-left:auto; margin-right:auto; width:80%">     
@@ -28,15 +29,15 @@
          	<td colspan=2><h1>Health and Safety</h1>      </td>
          </tr>     
          <tr>      
-         	<td colspan=2 style="height:100px"> Technological innovations have brought great convenience to us and become a part of our everyday life. We spend hours per day on computers and smart devices to work, study or entertain ourselves. However, prolonged computer use may cause health problems.  <h3>Place your details here with your name, class and class number</h3></td>     
+         	<td colspan=2 style="height:100px"> Technological innovations have brought great convenience to us and become a part of our everyday life. We spend hours per day on computers and smart devices to work, study or entertain ourselves. However, prolonged computer use may cause health problems.  <h3>Cheng Sze Shing Jackson 6D 06</h3></td>     
          </tr>     
-         <tr>  <td style="width:250px; height:150px">        <h1><img src="" alt=" " width="320" height= "200"></h1>       </td> 
+         <tr>  <td style="width:250px; height:150px">        <h1><img src="images/c.jpg" alt=" " width="320" height= "200"></h1>       </td> 
  
       		   <td><h2><strong>A) Health risks and correct posture</strong></h2>
       		     <p>If we do not maintain a proper posture and workstation set-up during prolonged use of computers and mobile devices, it will increase the following health risks, such as <em>repetitive strain injury (RSI)</em> and <em>eyestrain</em>. Therefore, it is essential to be aware of good posture and other ergonomic practices.</p>  </br>
                    </td>     
          </tr>     
-         <tr>  <td style="width:250px; height:150px">        <h1><img src="" alt=" " width="200" height= "250"></h1>       </td> 
+         <tr>  <td style="width:250px; height:150px">        <h1><img src="images/e.webp" alt=" " width="200" height= "250"></h1>       </td> 
  
       		   <td><h2><strong>B) Computer ergonomics</strong></h2>
       		      <p>Ergonomics is a science-based discipline about designing or arranging workplaces, products and systems to suit the people who use them.</br>
