--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Computer Health Issues</title>
-    <link rel="icon" type="image/png" href="images/favicon.png?">
+    <link rel="icon" type="image/png" href="favicon.png?">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
