--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
          <tr>      
          	<td colspan=2 style="height:100px"> Technological innovations have brought great convenience to us and become a part of our everyday life. We spend hours per day on computers and smart devices to work, study or entertain ourselves. However, prolonged computer use may cause health problems.  <h3>Cheng Sze Shing Jackson 6D 06</h3></td>     
          </tr>     
-         <tr>  <td style="width:250px; height:150px">        <h1><img src="images/c.jpg" alt=" " width="320" height= "200"></h1>       </td> 
+         <tr>  <td style="width:250px; height:150px">        <h1><img src="images/c.jpg" alt="A photo of collection of correct postures and incorrect postures, with different workstation set-ups" width="320" height= "200"></h1>       </td> 
  
       		   <td><h2><strong>A) Health risks and correct posture</strong></h2>
       		     <p>If we do not maintain a proper posture and workstation set-up during prolonged use of computers and mobile devices, it will increase the following health risks, such as <em>repetitive strain injury (RSI)</em> and <em>eyestrain</em>. Therefore, it is essential to be aware of good posture and other ergonomic practices.</p>  </br>
                    </td>     
          </tr>     
-         <tr>  <td style="width:250px; height:150px">        <h1><img src="images/e.webp" alt=" " width="200" height= "250"></h1>       </td> 
+         <tr>  <td style="width:250px; height:150px">        <h1><img src="images/e.webp" alt="A spinning office chair " width="200" height= "250"></h1>       </td> 
  
       		   <td><h2><strong>B) Computer ergonomics</strong></h2>
       		      <p>Ergonomics is a science-based discipline about designing or arranging workplaces, products and systems to suit the people who use them.</br>
@@ -45,15 +45,15 @@
 			 Apart from proper posture and correct positioning of furniture, taking regular breaks and exercising are also the keys to minimise the risk of injuries or harm. It may be difficult to create a new routine so it is a good way to use a break reminder software to remind you to rest.</p> 
                </td>     
          </tr>   
-        <tr>  <td style="width:320px; height:200px">        <h1><iframe width="320" height="200" src="https://www.youtube.com/embed/C36hpE1c1uE?si=abC67nCOIMp-JtCl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></h1>      </td> 
+        <tr>  <td style="width:320px; height:200px">        <h1><iframe width="320" height="200" src="https://www.youtube.com/embed/C36hpE1c1uE?si=abC67nCOIMp-JtCl" title="YouTube video player"></iframe></h1>      </td> 
  
       		   <td><h2><strong>C) Ergonomics in the user interface</strong></h2>
       		      <p>Ergonomics is not only related to the physical aspects such as body size and dominant hand, but also the individual's age, strength, technological experience, skill, cultural expectation, goal and so on. Ergonomic and user-friendly features are important in software design.</p> 
                </td>     
          </tr>              <tr>  <td colspan="2"><h2>What to Read Next:</h2>
-         <p>If you’d like to learn more about display screen equipment (DSE) health and safety, take a look at High Speed Training’s <a href="https://www.highspeedtraining.co.uk/hub/computer-health-and-safety/">online DSE Training</a>. The course covers everything you need to know about legal responsibilities, correct workstation set-up and risk assessment. You can find some great free resources available to download. Visit the DSE Workstation Assessment Checklist to help you assess your computer workstation and eliminate any risks. You can also download the Desk Ergonomics Infographic which can be printed out and stuck somewhere in the workplace to give people a quick reminder.</p>    
+         <p>If you’d like to learn more about display screen equipment (DSE) health and safety, take a look at High Speed Training’s <a href="https://www.highspeedtraining.co.uk/health‐and‐safety/dse‐training.aspx">online DSE Training</a>. The course covers everything you need to know about legal responsibilities, correct workstation set-up and risk assessment. You can find some great free resources available to download. Visit the DSE Workstation Assessment Checklist to help you assess your computer workstation and eliminate any risks. You can also download the Desk Ergonomics Infographic which can be printed out and stuck somewhere in the workplace to give people a quick reminder.</p>    
          </br>
-	 <p>Source: https://www.highspeedtraining.co.uk/hub/computer-health-and-safety/</p>
+	 <p>Source: https://www.highspeedtraining.co.uk/health‐and‐safety/dse‐training.aspx</p>
          </tr>     
           
       </table>  
